--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       </div>
 
       <div class="resume-action">
-        <a href="assets/SAR1614.pdf" class="btn btn-primary resume-btn" download>
+        <a href="#" class="btn btn-primary resume-btn" download>
           <i class="fas fa-download"></i> Download Resume
         </a>
         <p class="resume-note">PDF format • Updated July 2025</p>
