💄 Improve certification section: glass effect, spacing, shadows

--- a/index.html
+++ b/index.html
@@ -246,31 +246,32 @@
       <p class="section-subtitle">Validated Learning & Credentials</p>
     </div>
 
-    <div class="certifications-grid">
-      <!-- Certification 1 -->
-      <div class="cert-card">
-        <img src="assets/icons/icons8-tensorflow-48.png" alt="TensorFlow Certification">
-        <div class="cert-details">
-          <h3>TensorFlow Developer Certificater</h3>
-          <p>Issued by: Google</p>
-          <a href="https://www.credential.net/b85dde4f-fc41-48bd-9fbe-ec6fda6891e1" class="cert-link" target="_blank">View Certificate</a>
+    <div class="certifications-glass-container">
+      <div class="certifications-grid">
+        <!-- Certification 1 -->
+        <div class="cert-card">
+          <img src="assets/icons/icons8-tensorflow-48.png" alt="TensorFlow Certification">
+          <div class="cert-details">
+            <h3>TensorFlow Developer Certificate</h3>
+            <p>Issued by: Google</p>
+            <a href="https://www.credential.net/b85dde4f-fc41-48bd-9fbe-ec6fda6891e1" class="cert-link" target="_blank">View Certificate</a>
+          </div>
+        </div>
+
+        <!-- Certification 2 -->
+        <div class="cert-card">
+          <img src="assets/icons/icons8-aws-48.png" alt="AWS Certification">
+          <div class="cert-details">
+            <h3>AWS Certified Solutions Architect – Associate</h3>
+            <p>Issued by: Amazon Web Services</p>
+            <a href="https://www.credly.com/badges/33cf0ddb-e440-46d0-a80f-3ba44d62fd63/public_url" class="cert-link" target="_blank">View Certificate</a>
+          </div>
         </div>
       </div>
-
-      <!-- Certification 2 -->
-      <div class="cert-card">
-         <img src="assets/icons/icons8-aws-48.png" alt="AWS Certification">
-        <div class="cert-details">
-          <h3>AWS Certified Solutions Architect – Associate</h3>
-          <p>Issued by: Amazon Web Services</p>
-          <a href="https://www.credly.com/badges/33cf0ddb-e440-46d0-a80f-3ba44d62fd63/public_url" class="cert-link" target="_blank">View Certificate</a>
-        </div>
-      </div>
-
-      <!-- Add more as needed -->
     </div>
   </div>
 </section>
+
 
 
 
